@@ -8,10 +8,23 @@ import java.util.Objects;
 // to simplify definition of gate matrix
 public class GateConfig extends ArrayList<List<Gate>> {
 
+    /**
+     * Create a new GateConfig for <code>n</code> circuits
+     * @param n
+     * @return an initial GateConfig, containing <code>n</code> circuits 
+     */
+    public static GateConfig initial(int n) {
+        GateConfig answer = new GateConfig();
+        for (int i = 0; i < n; i++) {
+            answer.add(List.of(Gate.IDENTITY));
+        }
+        return answer;
+    }
+    
     public static GateConfig of(List<Gate> gates) {
-        GateConfig matrix = new GateConfig();
-        matrix.add(Objects.requireNonNull(gates));
-        return matrix;
+        GateConfig answer = new GateConfig();
+        answer.add(Objects.requireNonNull(gates));
+        return answer;
     }
 
     public static GateConfig of(List<Gate> gate, List<Gate>... gates) {
@@ -20,13 +33,13 @@ public class GateConfig extends ArrayList<List<Gate>> {
         return matrix;
     }
 
-    public static GateConfig of(Gate gate) {
-        return GateConfig.of(List.of(Objects.requireNonNull(gate)));
-    }
-
-    public static GateConfig of(Gate gate, Gate... gates) {
-        GateConfig gateConfig = GateConfig.of(gate);
-        gateConfig.get(0).addAll(Arrays.asList(gates));
-        return gateConfig;
-    }
+//    public static GateConfig of(Gate gate) {
+//        return GateConfig.of(List.of(Objects.requireNonNull(gate)));
+//    }
+//
+//    public static GateConfig of(Gate gate, Gate... gates) {
+//        GateConfig gateConfig = GateConfig.of(gate);
+//        gateConfig.get(0).addAll(Arrays.asList(gates));
+//        return gateConfig;
+//    }
 }
